<resources>
    <string name="app_name">HappyLife</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首页</string>
    <string name="mine">我的</string>
    <string name="news">新闻</string>
    <string name="pictures">图集</string>
    <string name="video">视频</string>

    <string-array name="tab_list_names">
        <item>首页</item>
        <item>新闻热点</item>
        <item>视频</item>
        <item>图集</item>
        <item>防疫工作</item>
    </string-array>


</resources>